# jupyterlab-federated-worker-react

./: .gitignore  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml
src/: WorkerComponent.tsx  index.tsx  worker.ts
