[build-system]
requires = ["jupyter_packaging~=0.12", "jupyterlab>=3.5.3,<4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["myextension/labextension/**", "yarn.lock", ".*", "package-lock.json"]
